jingle: correctly send back unknown-session errors

I broke this in c1be75d9 but it wasn't tested. Luckily
WOCKY_JINGLE_ERROR_UNKNOWN_SESSION (2) is a valid WockyXmppError too so
we didn't crash before, we just sent <gone> instead.

https://bugs.freedesktop.org/show_bug.cgi?id=33789 is relevant.